--- a/Container debug/deployment-new.yaml
+++ b/Container debug/deployment-new.yaml
@@ -1,7 +1,3 @@
-# Please edit the object below. Lines beginning with a '#' will be ignored,
-# and an empty file will abort the edit. If an error occurs while saving this file will be
-# reopened with the relevant failures.
-#
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -43,8 +39,8 @@ spec:
         - --
         - --bigip-username=admin
         - --bigip-password=admin
-        - --bigip-url=10.145.69.190
-        - --bigip-partition=openshift
+        - --bigip-url=10.145.68.107
+        - --bigip-partition=kubernetes
         - --pool-member-type=cluster
         - --openshift-sdn-name=/Common/openshift_vxlan
         - --manage-routes=true
@@ -54,6 +50,7 @@ spec:
         - --route-label=systest
         - --insecure=true
         - --agent=as3
+        - --http-listen-address=0.0.0.0:8080
         command:
         - /app/bin/dlv
         - --listen=:40000
