--- a/deployment-k8s-bigip/deployment.yaml
+++ b/deployment-k8s-bigip/deployment.yaml
@@ -47,6 +47,10 @@ spec:
             - --default-ingress-ip=172.16.3.5
             - --log-as3-response=true
             - --override-as3-declaration=default/example-vs
+            - --as3-post-delay=10
+            - --tls-version=1.2
+            - --cipher-group=/Common/f5-ecc
+            - --ciphers=DES
             - cluster
           command:
           - /app/bin/k8s-bigip-ctlr
