--- a/deployment-k8s-bigip/deployment.yaml
+++ b/deployment-k8s-bigip/deployment.yaml
@@ -44,6 +44,7 @@ spec:
             - --insecure=true
             - --agent=as3
             - --as3-validation=true
+            - --manage-configmaps=false
             - --default-ingress-ip=172.16.3.5
             - --log-as3-response=true
             - --override-as3-declaration=default/example-vs
